<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="46dp"
            android:layout_marginStart="46dp"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:ellipsize="start"
            android:id="@+id/text_view"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/container"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="18dp">
            <com.google.android.material.button.MaterialButton
                style="@style/grey_btn_style"
                android:text="@string/clear"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/grey_btn_style"
                android:layout_marginHorizontal="18dp"
                android:text="@string/plus_minus"
                android:id="@+id/btn_plus_minus"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/grey_btn_style"
                android:layout_marginEnd="18dp"
                android:text="@string/percent"
                android:id="@+id/btn_percent"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/orange_btn_style"
                android:text="@string/division"
                android:id="@+id/btn_division"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="18dp">
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:text="@string/seven"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginHorizontal="18dp"
                android:text="@string/eight"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginEnd="18dp"
                android:text="@string/nine"
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/orange_btn_style"
                android:text="@string/multiplication"
                android:id="@+id/btn_multiplication"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:text="@string/four"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginHorizontal="18dp"
                android:text="@string/five"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginEnd="18dp"
                android:text="@string/six"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/orange_btn_style"
                android:text="@string/minus"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="18dp">
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:text="@string/one"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginHorizontal="18dp"
                android:text="@string/two"
                android:onClick="onNumberClick"
                android:id="@+id/btn_two"/>
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginEnd="18dp"
                android:text="@string/three"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/orange_btn_style"
                android:text="@string/plus"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="18dp">
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:text="@string/zero"
                android:layout_width="178dp"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                tools:ignore="RtlSymmetry" />
            <com.google.android.material.button.MaterialButton
                style="@style/darkGrey_btn_style"
                android:layout_marginHorizontal="18dp"
                android:text="@string/dot"
                android:id="@+id/btn_dot"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/orange_btn_style"
                android:text="@string/equal"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>